--- a/src/components/card/Card.styles.scss
+++ b/src/components/card/Card.styles.scss
@@ -1,18 +1,17 @@
-.card{
-    border-radius: 2vw;
-    height: 30vh;
-    width: 95vw;
-    display: flex;
-    flex-direction: row;
-    overflow: auto;
-    margin: 3px;
+.card {
+  border-radius: 2vw;
+  height: 45vh;
+  width: 95vw;
+  overflow: auto;
+  margin: 3px;
 }
-.currentWeather {
-    background-color: greenyellow;
-    height: 60vh;
-    font-size: calc(10px + 4vmin);
+.currentWeather.card {
+  background-color: greenyellow;
+  height: 50vh;
+  font-size: calc(10px + 4vmin);
 }
-.next24h{
-    background-color: green;
-
+.next24h.card {
+  background-color: green;
+  display: flex;
+  flex-direction: row;
 }
