--- a/src/components/card/Card.styles.scss
+++ b/src/components/card/Card.styles.scss
@@ -1,14 +1,13 @@
 .card {
   border-radius: 2vw;
-  height: 45vh;
+  height: auto;
   width: 95vw;
   overflow: auto;
   margin: 3px;
 }
 .currentWeather.card {
   background-color: greenyellow;
-  height: 50vh;
-  font-size: calc(10px + 4vmin);
+  font-size: calc(10px + 8vmin);
 }
 .next24h.card,
 .next7d.card {
@@ -17,6 +16,7 @@
   flex-direction: row;
 }
 .next7d.card {
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
