--- a/src/components/column/Column.styles.scss
+++ b/src/components/column/Column.styles.scss
@@ -2,7 +2,6 @@ p {
   margin: 2px;
 }
 .column {
-  border-radius: 30px;
   padding: 2px;
   height: auto;
   display: flex;
@@ -17,9 +16,21 @@ p {
   flex-shrink: 0;
   max-width: 75px;
 }
+.next24h p {
+  border-radius: 10px;
+  background-color: #8888;
+}
+.clouds {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .next7d.column {
   min-width: 12vw;
   flex-direction: row;
+}
+.weatherCode {
+  margin: 2px;
 }
 .LazyLoad {
   opacity: 0.5;
